--- a/html5_e_css3/style.css
+++ b/html5_e_css3/style.css
@@ -1,60 +1,91 @@
+body {
+    font-family: 'Montserrat', sans-serif;
+}
+
+header {
+    background-color: #BBBBBB;
+    padding: 20px 0;
+}
+
 .caixa {
-	/*text-align: center;*/
+    position: relative;
+    width: 940px;
+    margin: 0 auto;
+    text-shadow: 2px 2px 2px #584e4e;
 }
 
-.logo-pagina-principal {
-	text-align: left;
-	font-size: 2px;
+nav {
+    position: absolute;
+    top: 110px;
+    right: 0;
 }
 
-#banner {
-	width:100%;
+nav li {
+    display: inline;
+    margin: 0 0 0 15px;
 }
 
-.principal{
-	background: #CCCCCC;
-	padding: 30px;
+nav a {
+    text-transform: uppercase;
+    color: #000000;
+    font-weight: bold;
+    font-size: 22px;
+    text-decoration: none;
 }
 
-.titulo-principal {
-	padding-left: 20px;
-	font-size: 40px;
+nav a:hover {
+    color: #C78C19;
+    text-decoration: underline;
 }
 
-.titulo-centralizado {
-	text-align: center
+.produtos {
+    width: 940px;
+    margin: 0 auto;
+    padding: 50px 0;
 }
 
-p {
-	text-align: center;
+.produtos li {
+    display: inline-block;
+    margin: 0 0 0 15px;
+    text-align: center;
+    width: 30%;
+    vertical-align: top;
+    /*background: #CCCCCC;*/
+    margin: 0 1,5%;
+    padding: 30px 20px;
+    box-sizing: border-box;
+    /*border-color: #000000;
+    border-width: 2px;
+    border-style: solid;*/
+    border: 2px solid #000000;
+    border-radius: 10px;
 }
 
-#missao {
-	font-size: 20px
+.produtos li:hover {
+    border-color: #C78C19;
 }
 
-em strong {
-	color: #FF0000;
+.produtos li:active {
+    border-color: #088C19;
 }
 
-.itens {
-	font-style: italic
+.produtos li:hover h2 {
+    font-size: 34px;
 }
 
-.beneficios {
-	background: #FFFFFF;
-	padding: 20px;
+.produtos h2 {
+    font-size: 30px;
+    font-weight: bold;
 }
 
-ul {
-	display: inline-block;
-	vertical-align: top;
-	width: 20%;
-	margin-right: 15%;
+.produto-descricao {
+    font-size: 18px;
 }
 
-.imagembeneficios {
-	width: 50%;
+.produto-preco {
+    font-size: 22px;
+    font-weight: bold;
+    margin-top: 10px;
 }
 
 footer {
@@ -68,3 +99,220 @@ footer {
     font-size: 13px;
     margin-top: 20px 0 0;
 }
+
+form {
+    margin: 40px 0;
+}
+
+form label, form legend {
+    display: block;
+    font-size: 20px;
+    margin: 0 0 10px;
+}
+
+.input-padrao {
+    display: block;
+    margin: 0 0 20px;
+    padding: 10px 25px;
+    width: 50%;
+}
+
+.checkbox {
+    margin: 20px 0;
+}
+
+.enviar {
+    width: 40%;
+    padding: 15px 0;
+    background: orange;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    border: none;
+    border-radius: 5px;
+    transition: 1s all;
+    cursor: pointer;
+}
+
+.enviar:hover {
+    background: darkorange;
+    transform: scale(1.2);
+}
+
+table {
+    margin: 20px 0 40px;
+}
+
+thead {
+    background: #555555;
+    color: white;
+    font-weight: bold; 
+}
+
+td, th {
+    border: 1px solid #000000;
+    padding: 8px 15px;
+}
+
+/* css da página inicial */
+.banner {
+    width: 100%;
+    margin: 0 0 40px;
+    border: 3px solid #000000;
+    box-shadow: 10px 10px 8px #101010, 0px -8px 6px #000000;
+    
+}
+
+.titulo-principal {
+    text-align: center;
+    font-size: 2em;
+    margin: 0 0 1em;
+    clear: left;
+    text-shadow: 2px 2px 2px #584e4e;
+    /*color: rgba(0, 0, 0, 0.3);*/
+}
+
+/*.titulo-principal:before {
+    content: '[ ';
+}
+
+.titulo-principal:after {
+    content: ' ]';
+}*/
+
+/*.titulo-principal:first-letter {
+    font-size: 1.5em;
+}*/
+
+/*p:first-line {
+    font-style: italic;
+}*/
+
+.principal {
+    margin: 3em 0;
+    background: #FEFEFE;
+    width: 940px;
+    margin: 0 auto;
+}
+
+.principal p {
+    margin: 0 0 1em;
+    
+}
+
+.principal strong {
+    font-weight: bold;
+}
+
+.principal em {
+    font-style: italic;
+}
+
+.utensilios {
+    width: 120px;
+    float: left;
+    margin: 0 20px 20px 0;
+    box-shadow: 10px 5px 8px #101010;
+
+}
+
+.mapa {
+    padding: 3em 0; 
+    background: linear-gradient(#FEFEFE, #888888);
+    /*background: linear-gradient(90deg,orange 50%, blue, red);*/
+    /*background: radial-gradient(orange 50%, blue, red);*/
+}
+
+.mapa-conteudo {
+    width: 940px;
+    margin: 0 auto;
+    box-shadow: 10px 10px 20px 5px #101010;
+
+}
+
+.mapa p {
+    margin: 0 0 2em;
+    text-align: center;
+}
+
+.beneficios {
+    padding: 3em 0;
+    background: #888888;
+    /*backgroundbox-shadow: inset 0 0 30px #000000;*/
+}
+
+.conteudo-beneficios {
+    width: 640px;
+    margin: 0 auto;
+}
+
+.lista-beneficios {
+    width: 40%;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.itens {
+    line-height: 1.5;
+}
+/*.itens:last-child*/
+/*.itens:nth-child(número da lista a ser mudado e número+n, para marcar os as linhas em pares)*/
+.itens:first-child {
+    font-weight: bold;
+}
+
+.itens:before {
+    content: "✷"
+}
+
+.imagem-beneficios {
+    width: 60%;
+    /*opacity: 0.1; vai de 0.0 até 1.0*/
+    opacity: 1;
+    transition: 400ms;
+    box-shadow: 10px 10px 8px #101010;
+    /*box-shadow: x y camada de destoamento intensidade #000000;*/
+    /*box-shadow: 10px 10px 30px 20px #000000, -10px -10px yellow, -20px -20px rgba(255, 0, 0, 0.3)*/
+}
+
+.imagem-beneficios:hover {
+    opacity: 0.5; 
+}
+
+.video {
+    width: 560px;
+    margin: 2em auto;
+}
+
+@media screen and (max-width: 480px) {
+    .caixa, .principal, .conteudo-beneficios, .mapa-conteudo, .video {
+        width: auto;
+    }
+
+    h1 {
+        text-align: center;
+    }
+
+    nav {
+        position: static;
+    }
+
+    .lista-beneficios, .imagem-beneficios {
+        width: 100%;
+    }
+}
+/*main > p {
+    background: red;
+}
+
+img  + p {
+    background: blue;
+}
+
+img ~ p {
+    background: yellow;
+}
+
+.principal p:not(#missao) {
+    background: orange;
+}*/
