Muito tempo sem commit, iniciando o último curso da formação

--- a/html5_e_css3/style.css
+++ b/html5_e_css3/style.css
@@ -38,6 +38,10 @@ nav a:hover {
     text-decoration: underline;
 }
 
+main {
+    margin-left: 50px;
+}
+
 .produtos {
     width: 940px;
     margin: 0 auto;
