--- a/javascript_programando_na_linguagem_da_web/introducao-javascript/css/index.css
+++ b/javascript_programando_na_linguagem_da_web/introducao-javascript/css/index.css
@@ -49,6 +49,7 @@ section h2{
 	padding-bottom: .5em;
 	border-bottom: 1px solid #ccc;
 	margin-bottom: .5em;
+	margin-top: .5em;
 }
 
 table{
@@ -131,4 +132,8 @@ button[disabled=disabled], button:disabled {
 
 .campo-invalido{
 	border: 1px solid red;
+}
+
+.paciente-invalido {
+	background-color: lightcoral;
 }
